# tstredox

./: Cargo.toml
src/: c8_copypress.rs  excludepress.rs  execpress.rs  findmd5sum.rs  get_dirlistc.rs  get_dirlistr.rs  inputpress.rs  main.rs  rc_rotatepress.rs
