[package]
name = "hdbkmd5sum"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2021"
publish = false

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
default-features = false
features = ["wgpu", "tiny-skia", "web-colors", "thread-pool", "smol"]

[dependencies]
native-dialog = "^0"
chrono = "^0"
walkdir = "^0"
md5 = "^0"
