[package]
name = "filedialog"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2021"
publish = false

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
default-features = false
features = ["wgpu", "tiny-skia", "web-colors", "thread-pool", "smol"]

[dependencies]
kamadak-exif = "^0"
image = "^0"
walkdir = "^0"
